# ecr-ptc-webhook

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
deploy/chart/: .helmignore  Chart.yaml  values.yaml
deploy/chart/templates/: _helpers.tpl  certificate.yaml  configmap.yaml  deployment.yaml  mutatingwebhookconfiguration.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: main.py  metrics.py  registries.py
terraform/: README.md  main.tf  outputs.tf  registry_policy.tf  variables.tf  versions.tf
